--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -81,7 +81,7 @@
                                 <div class="form-group has-success">
                                     <label for="cc-name" class="control-label mb-1">Name on card </label>
 
-                                    <input id="cc-name" name="cc-name" type="text" class="form-control cc-name" maxlength="25" required #name>
+                                    <input id="cc-name" name="cc-name" type="text" class="form-control cc-name" maxlength="25" #name required>
 
                                 </div>
                                 <div class="form-group">
@@ -94,14 +94,14 @@
                                         <div class="form-group">
                                             <label for="cc-exp" class="control-label mb-1">ExpMonth</label>
 
-                                            <input id="cc-exp" name="cc-exp" type="number" class="form-control cc-exp" required placeholder="MM" maxlength="2" #expmonth>
+                                            <input id="cc-exp" name="cc-exp" type="number" class="form-control cc-exp" required placeholder="MM" maxlength="2" required #expmonth>
 
                                         </div>
                                     </div>
                                     <div class="col-4">
                                         <div class="form-group">
                                             <label for="cc-exp" class="control-label mb-1">ExpYear</label>
-                                            <input id="cc-exp" name="cc-exp" type="number" class="form-control cc-exp" required placeholder="YYYY" maxlength="2" #expyear>
+                                            <input id="cc-exp" name="cc-exp" type="number" class="form-control cc-exp" required placeholder="YYYY" maxlength="4" required #expyear>
 
                                         </div>
                                     </div>
@@ -109,7 +109,7 @@
                                     <div class="col-4">
                                         <label for="x_card_code" class="control-label mb-1">CVV</label>
                                         <div class="input-group">
-                                            <input id="x_card_code" name="x_card_code" type="number" class="form-control cc-cvc" maxlength="3" #cvc>
+                                            <input id="x_card_code" name="x_card_code" type="number" class="form-control cc-cvc" maxlength="3" required #cvc>
                                             <span class="invalid-feedback order-last">Enter the 3-digit code on back</span>
 
                                         </div>
@@ -135,18 +135,16 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
-            <!-- Modal Header -->
+
             <div class="modal-header">
                 <h4 class="modal-title"></h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
-            <!-- Modal body -->
             <div class="modal-body">
                 <h4>Payment Successful</h4>
             </div>
 
-            <!-- Modal footer -->
             <div class="modal-footer">
-                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+
             </div>
